2005-08-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/devel/index.html: update sca.uwaterloo.ca link to http

	* site/install/stable.ihtml: make URLs relative. 

2005-08-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/devel/misc/conferences.html: clean links.

2005-08-16  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/: update download link to 2.7.4
	
2005-08-14  Pedro Kroger  <kroeger@pedrokroeger.net>

	* site/install/devel.ihtml: shouldn't have a header (index.html)
	already have it.

2005-08-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* nl/switch/howto.html: Update.

2005-08-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: set links for 2.7.4

2005-08-05  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/: update download link to 2.6.3

2005-08-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/news.ihtml (Preferably): Typo.

	* TRANSLATION (Priorities): Update.

2005-08-04  Pedro Kroger  <kroeger@pedrokroeger.net>

	* site/install/devel.ihtml: remove (NOTE link)

	* site/install/stable.ihtml:  remove (NOTE link)

	* site/news.ihtml: tells emacs it's a html file.

2005-07-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/devel.ihtml: Add 2.7.3 for windows.

2005-07-25  John Mandereau  <john.mandereau@free.fr>

	* fr/: update documentation links to 2.6/2.7

	* fr/index.html: update to 2.7.3

2005-07-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* patch by John Mandereau: update 2.4 links to 2.6

2005-07-21  John Mandereau  <john.mandereau@free.fr>

	* TRANSLATION: add about/browser-language

	* fr/faq.html: translation correction

	* fr/about/browser-language.html: new translated file

2005-07-21  Heikki Junes <hjunes@cc.hut.fi>

	* newweb.css: revert 800x600 change, center instead and decrease
	size to a bit less than 100% -- prevents horizontal scrollbar.
	Fix alignment of plain text menu in IE6.

2005-07-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/index.html: Update to 2.6.1.
