@@ -12,7 +12,7 @@
 <h1>LilyPond avec Fink sous MacOS X</h1>
 
 <p>LilyPond est utilisable &agrave; travers Fink, dans sa version cvs instable
-  (<a href="http://fink.sourceforge.net/pdb/package.php/lilypond-unstable">instable</a>,
+  (<a href="http://fink.sourceforge.net/pdb/package.php/lilypond-devel">instable</a>,
   <a href="http://fink.sourceforge.net/pdb/package.php/lilypond">stable</a>).
 </p>
 
