@@ -13,7 +13,7 @@
 
 <p>LilyPond is verkrijgbaar via de Fink package manager, in de onstabiele cvs
   distributie
-  (<a href="http://fink.sourceforge.net/pdb/package.php/lilypond-unstable">onstabiel</a>,
+  (<a href="http://fink.sourceforge.net/pdb/package.php/lilypond-devel">onstabiel</a>,
   <a href="http://fink.sourceforge.net/pdb/package.php/lilypond">stabiel</a>).
 </p>
 
