@@ -13,8 +13,8 @@
 
 <p>LilyPond is available through fink, in the unstable cvs
   distribution
-  (<a href="http://fink.sourceforge.net/pdb/package.php/lilypond-unstable">unstable</a>,
-  <a href="http://fink.sourceforge.net/pdb/package.php/lilypond">stable</a>).
+  (<a href="http://fink.sourceforge.net/pdb/package.php/lilypond-devel">development version</a>,
+  <a href="http://fink.sourceforge.net/pdb/package.php/lilypond">stable version</a>).
 </p>
 
 <p>
