@@ -1,3 +1,9 @@
+2005-08-16  Graham Percival  <gpermus@gmail.com>
+
+	* site/install/macos.html, nl/install/macos.html,
+	fr/install/macos.html: change fink's lilypond-unstable
+	to lilypond-devel.  (package name change)
+
 2005-08-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* site/devel/index.html: update sca.uwaterloo.ca link to http
